--- a/home.html
+++ b/home.html
@@ -190,6 +190,7 @@
             border: black solid 0.075cm;
             border-right: none;
             border-bottom: none;
+            position: relative
         }
 
         .content-recipe-info .recipe-info-first .rc-person-count {
@@ -543,7 +544,7 @@
                     <p class="rc-title-ja">お名前 <span class="rc-title-eng">NAME</span></p>
                     <h4 class="rc-title-ja font-size-04 text-center margin-top-03">テスト</h4>
                 </div>
-                <div style="width: max-content; height: inherit; float: right">
+                <div style="width: max-content; height: inherit; float: right; position: absolute;right: 0.1cm;bottom: 0;">
                     <p class="rc-title-ja margin-block-0" style="margin-top: 0.5cm !important;">Mr. Ms.</p>
                     <h4 class="rc-title-ja font-size-04 text-center margin-block-0">様</h4>
                 </div>
